syntax = "proto2";
package handler;
option go_package = "etop.vn/api/pb/services/handler";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "common/common.proto";

message ResetStateRequest {
    optional int64 webhook_id = 1 [(gogoproto.nullable)=false];
    optional int64 account_id = 2 [(gogoproto.nullable)=false];
}
